--- a/html/index.html
+++ b/html/index.html
@@ -36,7 +36,7 @@
        This will be replaced with foodie fun facts and marketing info on wednesay<br>
        This will be replaced with foodie fun facts and marketing info on wednesay<br>
        This will be replaced with foodie fun facts and marketing info on wednesay<br>
-       This will be replaced with foodie fun facts and marketing info on wednesay<br>     This will be replaced with foodie fun facts and marketing info on wednesay<br>
+       This will be replaced with foodie fun facts and marketing info on wednesay<br>    
        This will be replaced with foodie fun facts and marketing info on wednesay<br>
        This will be replaced with foodie fun facts and marketing info on wednesay
    </p>
