--- a/html/about.html
+++ b/html/about.html
@@ -32,24 +32,29 @@
    </h3>
    </div>
    <div class="listItems">
-   <p>Our team is comprised of individuals working across the following cohorts at Lambda School:</p>
+   <p>Our team is comprised of individuals working across the following cohorts at Lambda School:
+      We're Students who been at Lambda School for more than three months and were all putting our skills
+      to the test. Today we created website about making more food fun rather than being stressed about what
+      we eat and enjoy. We hope you like our project. We are proud to present you the studentd who made this 
+      website possible. 
+   </p>
    <ul>
        <li>UX/Design</li>
        <li>Web/UI</li>
        <li>Web/React</li>
-       <li>iOS</li>
+       <li>IOS</li>
        <li>Back End Development</li>
        <li>Project Lead</li>
    </ul>
 </div>
 <div class="teamwork">
    <img src="../img /teamwork.jpg" alt="teamwork">
-   <h4>UX/Design - Kelsey Adams</h4>
-   <h4>Web/UI - Mariela Gonzales and Jess Novak</h4>
-   <h4>Web/React - David Isakson</h4>
-   <h4>iOS - Jesse Ruiz and Joshua Sharp</h4>
-   <h4>Back End Developer - Christopher Pupo</h4>
-   <h4>Project Lead - Basil Havens</h4>
+   <h4><a href="#">UX/Design - Kelsey Adams</a></h4>
+   <h4><a href="#">Web/UI - Mariela Gonzales and Jess Novak</a></h4>
+   <h4><a href="#">Web/React - David Isakson and Emmanuel Tanifum</a></h4>
+   <h4><a href="#">IOS - Jesse Ruiz and Joshua Sharp</a></h4>
+   <h4><a href="#">Back End Developer - Christopher Pupo</a></h4>
+   <h4><a href="#">Project Lead - Basil Havens</a></h4>
    </div>
 </section>
 <footer>
